--- a/pom.xml
+++ b/pom.xml
@@ -91,14 +91,14 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://54.255.174.111:8081/repository/flipkart-release/</url>
+	      <name>sukesh repositoryy</name>
+	      <urlhttp://43.204.230.28:8081/repository/sukesh-release/></url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://54.255.174.111:8081/repository/flipkart-snapshot/</url>
+	      <name>sukesh snapshot repository </name>
+	      <url>http://43.204.230.28:8081/repository/sukesh-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
